cluster/apps/networking/unifi-controller/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi-controller
  labels:
    istio-injection: enabled
