cluster/apps/networking/unifi-controller/app/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-world-to-unifi"
  namespace: unifi-controller
spec:
  endpointSelector:
    matchLabels:
      istio.io/gateway-name: unifi-gateway
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "8843"
              protocol: TCP
            - port: "8880"
              protocol: TCP
            - port: "8080"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-gateway-to-unifi"
  namespace: unifi-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: unifi-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            istio.io/gateway-name: unifi-gateway
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "8843"
              protocol: TCP
            - port: "8880"
              protocol: TCP
            - port: "8080"
              protocol: TCP
